Remove styles to fix button alignment issues with WordPress 5.3 (fixed in 5.3.1)

--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,3 @@
  * Church Content General Styles
  */
 
-/*******************************************
- * INPUTS
- *******************************************/
-
-/* Move inline buttons down (new WP 5.3 styling) */
-
-.ctc-license-button,
-.ctmb-upload-file,
-#ctc-get-coordinates-button {
-	margin-top: 1.5px !important;
-}
